tests/toy/neg/000823_mutation.toylang
program a = { a = var a == a; } .
